--- a/frontend/src/app/component/doktor-view/doktor-view.component.css
+++ b/frontend/src/app/component/doktor-view/doktor-view.component.css
@@ -1,10 +1,16 @@
 .flex-row-container {
     display: flex;
     flex-direction: row;
-    align-items: flex-start;    
+    align-items: stretch;   
+    width: 100%;
+    
 }
 .flex-column-container {
     display: flex;
     flex-direction: column;
-    align-items:center;    
+    align-items:stretch;    
+}
+
+.item {
+    flex: 50%;
 }
